build of dcm4che-imageio-test fails on Java 16.0.1 with NPE #1031 Add JVM parameters for runtime (from java 8 to 17)